# Jarvis

./: .gitignore  .gitmodules  README.md
agent/: Cargo.toml  dev-install.ps1
agent/.jarvis/: build-ubuntu.ps1  build.yaml  ubuntu.Dockerfile
agent/agent-sdk/: Cargo.toml
agent/agent-sdk/src/: client.rs  error.rs  lib.rs  server.rs
agent/agent-worker/: Cargo.toml  dev-install.ps1  start.ps1
agent/agent-worker/src/: main.rs  model.rs
agent/plugins/hello-world-plugin/: Cargo.toml  dev-install.ps1
agent/plugins/hello-world-plugin/src/: main.rs
examples/container-build/: Dockerfile  main.py
examples/container-build/.jarvis/: build.yaml
examples/container-publish/: Dockerfile  README.md  main.py
examples/container-publish/.jarvis/: build.yaml
examples/container-publish/.jarvis/secrets/: .gitignore
examples/hello-plugins/.jarvis/: build.yaml
examples/secrets/.jarvis/: build.yaml
examples/secrets/.jarvis/secrets/: .gitignore  api-key-test.secret.txt
examples/simple/.jarvis/: build.yaml
jarvis-cli/: Cargo.toml
jarvis-cli/src/: cli_output_formatter.rs  main.rs
jarvis-core/: Cargo.toml
jarvis-core/src/: build.rs  cleanup.rs  config.rs  docker_image_name.rs  init.rs  lib.rs  runtime.rs  validate.rs
jarvis-core/src/runtime/: docker_runtime.rs  k8s_runtime.rs
jarvis-daemon/: package.json  webpack.config.js
jarvis-daemon/service/: docker-compose.yaml  schema.sql
jarvis-daemon/src/: docker-event-hub.js  docker-events.js  index.js  storage.js
jarvis-ui/: README.md  build.ps1  index.html  package.json
jarvis-ui/src/: Main.elm  Router.elm  main.ts
jarvis-ui/src/router/: index.ts
jarvis-ui/src/views/: Builds.vue  Home.vue
