[package]
name = "jarvis-core"
version = "0.1.0"
authors = ["ThetaSinner <greatdjonfire@hotmail.co.uk>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bollard = { version = "0.7" }
tokio = "0.2"
flate2 = "1.0"
tar = "0.4"
futures-util = "0.3"
