[package]
name = "jarvis-core"
version = "0.1.0"
authors = ["ThetaSinner <greatdjonfire@hotmail.co.uk>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
# Waiting for PR to be merged https://github.com/fussybeaver/bollard/pull/100
bollard = { path = "../dep/bollard" }
tokio = { version = "0.2", features = ["full"]}
reqwest = { version = "0.10", features = ["json"] }
flate2 = "1.0"
tar = "0.4"
futures = "0.3"
futures-util = "0.3"
rust-crypto = "0.2"
async-trait = "0.1"
rand = "0.7"
hostname-validator = "1.0"
regex = "1.3"
ansi-escapes = "0.1.0"
chrono = "0.4"
path-absolutize = "3.0"
