[package]
name = "agent-worker"
version = "0.1.0"
authors = ["ThetaSinner <greatdjonfire@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-core-client = { version = "14.2", features = ["ipc"]}
jsonrpc-core = "14.2"
tokio = "0.1"
futures = "0.3"
agent-sdk = { path = "../agent-sdk" }
serde_json = "1.0"