[package]
name = "agent-worker"
version = "0.1.0"
authors = ["ThetaSinner <greatdjonfire@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agent-sdk = { path = "../agent-sdk" }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
pretty_env_logger = "0.4"
log = "0.4"
regex = "1.3"
